[package]
name = "The-Future-of-Mail"
authors = ["Ryan Matthews <etrigan976@gmail.com>"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/etrigan976/The-Future-of-Mail"
license = "MIT"

[dependencies]
bevy = {version = "0.15.1", features = ["audio"]}
rand = "0.8"